# splunk-kvstore-cli

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  requirements-dev.txt  setup.cfg  splunk_kvstore_cli.py
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yaml
tests/e2e/: test_splunk_kvstore_cli.py
tests/unit/: conftest.py  test_splunk_kvstore_cli.py
