[metadata]
name = splunk_kvstore_cli
version = 0.0.1
description = Detects secrets that are defined in the repository and are not used in Github Actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artemrys/splunk-kvstore-cli
author = Artem Rys
author_email = rysartem@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = splunk_kvstore_cli
python_requires = >=3.7.0

[options.entry_points]
console_scripts =
    splunk-kvstore=splunk_kvstore_cli:main

[bdist_wheel]
universal = True
