[metadata]
name = splunk_kvstore_cli
version = 1.1.0
description = Splunk KVStore CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artemrys/splunk-kvstore-cli
author = Artem Rys
author_email = rysartem@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = splunk_kvstore_cli
python_requires = >=3.7

[options.entry_points]
console_scripts =
    kv=splunk_kvstore_cli:main

[bdist_wheel]
universal = True
